# Huckel_Theory_Extension

./: CMakeLists.txt  Dockerfile  README.md  build_image.sh  interactive.sh
data/: 2,4-hexadiyne.json  Cyclopropane_tris_methylene.json  biphenylene.json  chrysene.json  cis-dimethylcyclopropane.json  cubane.json  cyclobutene.json  cyclopropene.json  diacetylene.json  fulvene.json  isobutene.json  pyrene.json  trimethylethene.json
src/: basis_sets.h  main.cpp
